charon/tests/ui/monomorphization/dyn-trait.out
error: `dyn Trait` is not supported with `--monomorphize`; use `--monomorphize-conservative`
  --> tests/ui/monomorphization/dyn-trait.rs:12:27
   |
12 |     let _ = dyn_to_string(&str);
   |                           ^^^^

ERROR Charon failed to translate this code (1 errors)
